--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@headlessui/react": "^1.7.8",
     "@heroicons/react": "^2.0.14",
     "@next-auth/supabase-adapter": "^0.2.1",
-
+    "@react-three/drei": "^9.58.5",
+    "@react-three/fiber": "^8.12.0",
+    "@react-three/postprocessing": "^2.7.1",
     "@supabase/auth-helpers-nextjs": "^0.5.4",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/auth-ui-react": "^0.2.6",
@@ -25,6 +27,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.24.4",
     "@tanstack/react-query-devtools": "^4.24.4",
+    "@types/three": "^0.150.0",
     "clsx": "^1.2.1",
     "daisyui": "^2.49.0",
     "framer-motion": "^8.5.5",
@@ -39,6 +42,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
+    "three": "^0.150.1",
     "wavesurfer.js": "^6.6.2",
     "zod": "^3.20.6"
   },
