--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pqina/pintura": "^8.51.7",
+    "@pqina/react-pintura": "^8.51.7",
     "@banana-dev/banana-dev": "^4.0.0",
     "@headlessui/react": "^1.7.8",
     "@heroicons/react": "^2.0.14",
